2009-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Add a newline character after
	  writing a trap to the SNMP log to make it more readable.

	* lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm, lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/PredictionServer.pm, lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/DataServer.pm, lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm: Properly set tagente_estado.running_by.

2009-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed *inc data processing.

2009-04-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Fixed SNMP alerts.

	* lib/PandoraFMS/Core.pm: Fixed forced alert execution.

2009-04-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Server.pm: Enabled thread status detection when
	  available.

	* lib/PandoraFMS/Core.pm: Fixed module status calculation. Moved and
	  rewrote the old pandora_ping* functions. Small aesthetic fixes.

	* lib/PandoraFMS/ReconServer.pm, lib/PandoraFMS/NetworkServer.pm: Use
	  the new pandora_ping* functions. The old functions were not thread
	  safe and had to lock.

	* bin/pandora_server: Properly shutdown on error.

2009-04-21  Jorge Gonzalez  <jorgegonz@artica.es>

	* util/pandora_dbstress.README: fixed many typos and width, now fits
	  80 columns.

2009-04-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Re-enabled detection of duplicate data
	  within a 48 hour interval.

2009-04-20  Sancho Lerena <slerena@artica.es>

	* pandora_server_installer: Added --no-tentacle switch, added more
	descriptive labels.

2009-04-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed another typo.

2009-04-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Temporarily disabled TCP scans, the
	  Recon Server was too slow. Fixed a bug that reset recon tasks
	  when scanning large networks.

	* lib/PandoraFMS/DataServer.pm: Small fix.
